<resources>
    <string name="app_name">ProgettoMonk</string>
    <string name="register"> Registrami </string>
    <string name="login">Accedi</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_register">Registrati Ora</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="register_login">Sei già un membro? Accedi!</string>
    <string name="email">Email</string>
    <string name="pswDimenticata">Password dimenticata</string>
    <string name="immagini">IMMAGINI</string>
    <string name="video">VIDEO</string>
    <string name="link">LINK</string>
</resources>
